--- a/config/sites/default/core.entity_view_display.node.page.teaser.yml
+++ b/config/sites/default/core.entity_view_display.node.page.teaser.yml
@@ -25,6 +25,7 @@ content:
 hidden:
   field_basic_components: true
   field_media: true
+  field_metatags: true
   field_reference_access_control: true
   field_text: true
   search_api_excerpt: true
