--- a/config/sites/default/core.entity_view_display.node.profile.teaser.yml
+++ b/config/sites/default/core.entity_view_display.node.profile.teaser.yml
@@ -105,6 +105,7 @@ content:
 hidden:
   field_affiliations_ref: true
   field_insurance_ref: true
+  field_metatags: true
   field_profile_board_certified: true
   field_profile_education: true
   field_profile_epic_id: true
