--- a/config/sites/default/core.entity_view_display.node.service.teaser.yml
+++ b/config/sites/default/core.entity_view_display.node.service.teaser.yml
@@ -27,4 +27,5 @@ hidden:
   field_body: true
   field_conditions_ref: true
   field_medical_specialties_ref: true
+  field_metatags: true
   search_api_excerpt: true
