--- a/config/sites/default/editor.editor.basic_html.yml
+++ b/config/sites/default/editor.editor.basic_html.yml
@@ -33,7 +33,7 @@ settings:
           name: Media
           items:
             - Blockquote
-            - media_entity_embed
+            - DrupalMediaLibrary
             - Table
         -
           name: 'Block Formatting'
