--- a/config/sites/default/editor.editor.full_html.yml
+++ b/config/sites/default/editor.editor.full_html.yml
@@ -38,7 +38,7 @@ settings:
           name: Media
           items:
             - Blockquote
-            - media_entity_embed
+            - DrupalMediaLibrary
             - Table
             - HorizontalRule
         -
