--- a/config/sites/default/views.view.auto_synonym.yml
+++ b/config/sites/default/views.view.auto_synonym.yml
@@ -14,7 +14,6 @@ description: ''
 tag: ''
 base_table: search_api_index_acquia_search_index
 base_field: search_api_id
-core: 8.x
 display:
   default:
     display_plugin: default
@@ -164,6 +163,8 @@ display:
             placeholder: ''
             min_placeholder: ''
             max_placeholder: ''
+            operator_limit_selection: false
+            operator_list: {  }
           is_grouped: false
           group_info:
             label: ''
@@ -203,6 +204,8 @@ display:
               anonymous: '0'
               administrator: '0'
             placeholder: ''
+            operator_limit_selection: false
+            operator_list: {  }
           is_grouped: false
           group_info:
             label: ''
