--- a/config/sites/default/core.entity_view_display.node.profile.search_index.yml
+++ b/config/sites/default/core.entity_view_display.node.profile.search_index.yml
@@ -133,6 +133,7 @@ content:
     settings: {  }
     third_party_settings: {  }
 hidden:
+  field_metatags: true
   field_profile_epic_id: true
   field_profile_first_name: true
   field_profile_image: true
