--- a/config/sites/default/embed.button.media_entity_embed.yml
+++ b/config/sites/default/embed.button.media_entity_embed.yml
@@ -25,4 +25,5 @@ type_settings:
   entity_browser: media_entity_browser_media_library
   entity_browser_settings:
     display_review: false
+icon: {  }
 icon_uuid: null
