--- a/config/sites/default/views.view.workbench_recent_content.yml
+++ b/config/sites/default/views.view.workbench_recent_content.yml
@@ -15,7 +15,6 @@ description: 'Content overview page for Workbench.'
 tag: Workbench
 base_table: node_field_data
 base_field: nid
-core: 8.x
 display:
   default:
     display_plugin: default
@@ -540,6 +539,8 @@ display:
               anonymous: '0'
               administrator: '0'
               editor: '0'
+            operator_limit_selection: false
+            operator_list: {  }
           is_grouped: false
           group_info:
             label: ''
@@ -582,6 +583,8 @@ display:
               administrator: '0'
               editor: '0'
             reduce: false
+            operator_limit_selection: false
+            operator_list: {  }
           is_grouped: false
           group_info:
             label: ''
@@ -622,6 +625,8 @@ display:
               authenticated: authenticated
               anonymous: '0'
               administrator: '0'
+            operator_limit_selection: false
+            operator_list: {  }
           is_grouped: false
           group_info:
             label: ''
@@ -666,6 +671,8 @@ display:
               anonymous: '0'
               administrator: '0'
             reduce: 1
+            operator_limit_selection: false
+            operator_list: {  }
           is_grouped: false
           group_info:
             label: ''
@@ -706,6 +713,8 @@ display:
             multiple: false
             remember_roles:
               authenticated: authenticated
+            operator_limit_selection: false
+            operator_list: {  }
           is_grouped: false
           group_info:
             label: ''
@@ -868,6 +877,8 @@ display:
             multiple: false
             remember_roles:
               authenticated: authenticated
+            operator_limit_selection: false
+            operator_list: {  }
           is_grouped: false
           group_info:
             label: ''
