--- a/docroot/themes/custom/tower_health/components/_patterns/00-base/global/01-colors/colors.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/00-base/global/01-colors/colors.yml
@@ -111,6 +111,8 @@ items:
     value: '#404041'
   - name: $black
     value: black
+  - name: $ratings
+    value: '#ffc619'
 meta:
   description: >-
     To add to these items, use Sass variables that start with <code>$</code> in
