--- a/config/sites/default/core.entity_form_display.node.service.default.yml
+++ b/config/sites/default/core.entity_form_display.node.service.default.yml
@@ -27,6 +27,8 @@ third_party_settings:
       children:
         - group_description
         - group_core_service
+        - group_related_services
+        - group_related_locations
         - group_medical_specialties_condit
         - group_flexible_components
       parent_name: ''
@@ -40,6 +42,7 @@ third_party_settings:
       region: content
     group_description:
       children:
+        - title
         - field_service_headline
         - field_service_intro
         - field_body
@@ -74,7 +77,7 @@ third_party_settings:
         - field_conditions_ref
         - field_medical_specialties_ref
       parent_name: group_vertical_tabs
-      weight: 8
+      weight: 10
       format_type: tab
       format_settings:
         id: ''
@@ -88,7 +91,7 @@ third_party_settings:
       children:
         - field_service_flex
       parent_name: group_vertical_tabs
-      weight: 9
+      weight: 11
       format_type: tab
       format_settings:
         id: ''
@@ -97,6 +100,34 @@ third_party_settings:
         formatter: closed
         required_fields: true
       label: 'Flexible Components'
+      region: content
+    group_related_services:
+      children:
+        - field_service_related_ref
+      parent_name: group_vertical_tabs
+      weight: 8
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        formatter: closed
+        required_fields: true
+      label: 'Related Services'
+      region: content
+    group_related_locations:
+      children:
+        - field_location_ref
+      parent_name: group_vertical_tabs
+      weight: 9
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        formatter: closed
+        required_fields: true
+      label: 'Related Locations'
       region: content
 id: node.service.default
 targetEntityType: node
@@ -111,7 +142,7 @@ content:
     third_party_settings: {  }
   field_body:
     type: text_textarea
-    weight: 28
+    weight: 3
     region: content
     settings:
       rows: 5
@@ -172,7 +203,7 @@ content:
       default_paragraph_type: ''
     third_party_settings: {  }
   field_service_headline:
-    weight: 26
+    weight: 1
     settings:
       size: 60
       placeholder: ''
@@ -181,7 +212,7 @@ content:
     region: content
   field_service_intro:
     type: text_textarea
-    weight: 27
+    weight: 2
     region: content
     settings:
       rows: 5
