--- a/config/sites/default/field.field.node.service.field_service_core_bool.yml
+++ b/config/sites/default/field.field.node.service.field_service_core_bool.yml
@@ -13,9 +13,11 @@ entity_type: node
 bundle: service
 label: 'Is this a core service'
 description: ''
-required: true
+required: false
 translatable: false
-default_value: {  }
+default_value:
+  -
+    value: 0
 default_value_callback: ''
 settings: {  }
 field_type: list_integer
