--- a/config/sites/default/field.field.node.service.field_service_intro.yml
+++ b/config/sites/default/field.field.node.service.field_service_intro.yml
@@ -13,7 +13,7 @@ entity_type: node
 bundle: service
 label: 'Short intro'
 description: ''
-required: true
+required: false
 translatable: false
 default_value: {  }
 default_value_callback: ''
