--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/service-detail/service-detail.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/service-detail/service-detail.yml
@@ -7,8 +7,8 @@ header:
       url: "#"
       text: "Conditions & Services"
     3:
-      text: "3rd Level"
-  title: Women's Health
+      text: "Women's Services"
+  title: Women's Services
   lede: From puberty to menopause and beyond, you’ll find sensitive, expert care for women at Tower Health. Partner with compassionate caregivers who understand and address your evolving needs.
   image:
     url: '../../images/AdobeStock_254696350_Preview.jpeg'
@@ -22,8 +22,21 @@ header:
       url: "#"
       label: "484-628-HELP"
 section_items:
-  - title: "Sub-item One"
+  - title: "Breast Health"
     url: "/"
+    below:
+      - title: "Mammography"
+        url: "/"
+      - title: "Breast Ultrasounds & Screenings"
+        url: "/"
+      - title: "Breast Evaluations & Consultations"
+        url: "/"
+      - title: "Breast Diagnostic Testing"
+        url: "/"
+      - title: "Second Opinion Consultation"
+        url: "/"
+      - title: "Reconstructive Surgery"
+        url: "/"
   - title: "Sub-item Two"
     url: "/"
   - title: "Sub-item Three"
@@ -130,3 +143,11 @@ image_callout:
   links:
     - url: "/"
       text: "Our Guidelines"
+cta:
+  title: "Need Help? We're Here."
+  text: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sit amet dolor dapibus, mollis diam id, euismod urna. Nulla finibus lorem in massa semper, at ultrices qam interdum. Praesent nec ante id lorem cursus."
+  link:
+    url: "/"
+    text: "484-628-HELP"
+    icon: "th-cal.svg"
+    variation: "right"
