Fixed stylelint, added actual reviews for demo purposes, added dates, tweaked titles, and changed Find a Location search placeholder.

--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/provider-detail/provider-detail.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/provider-detail/provider-detail.yml
@@ -132,38 +132,38 @@ affiliation:
 review_url: '#'
 reviews:
   - rating: 4
-    review: 'I know how frustrating it is to find a quality dog bed! And, how disappointing it is to invest money into one that doesnt hold up. Ugh! For these reasons I want to share my experience with my "Friends Forever" purchase in hopes that it will help someone else. This is by far one of the best dog beds I have ever purchased and at a good/fair price for the quality. Let me clarify. I wouldnt have purchased this dog bed at the listed price of $199.00, because that is out of my budget. I paid $99.00 (sale price) for this bed and it is worth every penny.'
-    date: December 2019
+    review: 'This place saved my LIFE. Through all the trauma, abuse and addiction I endured, they were there when nobody else was. They gave me the guidance I was lacking. They gave me all the tools and resources I needed and never left my side. 2 years later, I’m at a whole different place in my life and now they share my success story with others. These social workers/doctors/ nurses are amazing people, that I will continue to carry in my heart'
+    date: November 18, 2019
   - rating: 3
-    review: 'Over the years, I have had six dogs (rescues). So, I have some experience with dog beds and how well they hold up. In the past, I have paid a little over and a little under $100 and received lesser quality beds from many other companies. And, this is why I wont purchase from those companies/manufacturers again. From now on, all my future dog bed purchases will be from "Friends Forever" as long as they maintain the quality at a reasonable price.'
-    date: December 2019
+    review: 'Went in for an ER visit with my wife and son. Every single person we interacted with was friendly, caring and helpful. This has seldom been my experience at hospitals, especially ERs and I just couldnt believe how much of a contrast Reading Hospital was. No one likes going to the Hospital but seriously thank you to Reading for treating us like people.'
+    date: October 27, 2019
   - rating: 4.5
-    review: 'Donec rutrum eros sit amet tortor posuere, sed iaculis ex hendrerit. Pellentesque mauris libero, faucibus sit amet ipsum non, egestas vulputate diam. Nam sed lacinia dolor, at venenatis ante. Phasellus lacinia ut justo et fermentum. Ut ultricies turpis vel accumsan pellentesque. Aliquam eu porttitor justo. Suspendisse semper ipsum non risus suscipit interdum. Donec iaculis tempus nisl, quis tristique elit tristique ut. Suspendisse porttitor risus ac purus fringilla, non molestie ante egestas. Quisque iaculis gravida nunc sit amet porttitor. Donec consectetur placerat mauris at aliquet. Nam eget rhoncus elit, sit amet laoreet enim. In sit amet enim sem. Etiam tortor turpis, viverra et nulla eget, interdum ornare eros. Praesent consectetur, diam sit amet venenatis pellentesque, sem nunc interdum lorem, et sagittis magna ipsum nec mi. Vestibulum dictum id arcu vel iaculis. Aliquam rutrum justo erat, eget mattis ex lobortis in. Nam arcu neque, tempus at nulla in, dignissim malesuada neque. Vivamus leo diam, vestibulum vel dapibus vel, tincidunt non lacus. Aliquam placerat lectus in velit porttitor tristique.'
-    date: December 2019
+    review: 'Extremely impressed by the nurses and doctors in the maternity wing here. My wife and I were cared for from the moment we walked in up until the minute we left with our newborn. Highly recommend this hospital for expectant mothers!'
+    date: September 9, 2019
   - rating: 4
     review: 'Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit, temporibus dolor rerum consequatur reiciendis, magni cum deserunt pariatur nisi atque unde commodi dicta nemo libero enim porro obcaecati? Ducimus, sapiente!'
-    date: December 2019
+    date: July 28, 2019
   - rating: 2
     review: 'Suspendisse imperdiet vitae ante nec gravida. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vestibulum eleifend eros tincidunt libero consequat vulputate. Donec pharetra nisl eu quam tempus, sed commodo est tincidunt. Phasellus laoreet sem id nisl dignissim, at porttitor mauris tristique. Proin vestibulum massa eget pretium elementum. Aliquam fringilla libero et urna posuere scelerisque. Fusce tristique eget lorem vel aliquet. Proin a orci vel eros laoreet accumsan. Etiam imperdiet ac lectus eu lacinia. Nam blandit, arcu nec condimentum porttitor, tortor elit maximus ligula, in rhoncus metus dolor a ipsum. Pellentesque suscipit iaculis nisi vitae pharetra. In hac habitasse platea dictumst.'
-    date: November 2019
+    date: June 17, 2019
   - rating: 2.5
     review: 'Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit, temporibus dolor rerum consequatur reiciendis, magni cum deserunt pariatur nisi atque unde commodi dicta nemo libero enim porro obcaecati? Ducimus, sapiente!'
-    date: October 2019
+    date: June 13, 2019
   - rating: 3.75
     review: 'Suspendisse imperdiet vitae ante nec gravida. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vestibulum eleifend eros tincidunt libero consequat vulputate. Donec pharetra nisl eu quam tempus, sed commodo est tincidunt. Phasellus laoreet sem id nisl dignissim, at porttitor mauris tristique. Proin vestibulum massa eget pretium elementum. Aliquam fringilla libero et urna posuere scelerisque. Fusce tristique eget lorem vel aliquet. Proin a orci vel eros laoreet accumsan. Etiam imperdiet ac lectus eu lacinia. Nam blandit, arcu nec condimentum porttitor, tortor elit maximus ligula, in rhoncus metus dolor a ipsum. Pellentesque suscipit iaculis nisi vitae pharetra. In hac habitasse platea dictumst.'
-    date: September 2019
+    date: May 5, 2019
   - rating: 4
     review: 'Donec rutrum eros sit amet tortor posuere, sed iaculis ex hendrerit. Pellentesque mauris libero, faucibus sit amet ipsum non, egestas vulputate diam. Nam sed lacinia dolor, at venenatis ante. Phasellus lacinia ut justo et fermentum. Ut ultricies turpis vel accumsan pellentesque. Aliquam eu porttitor justo. Suspendisse semper ipsum non risus suscipit interdum. Donec iaculis tempus nisl, quis tristique elit tristique ut. Suspendisse porttitor risus ac purus fringilla, non molestie ante egestas. Quisque iaculis gravida nunc sit amet porttitor. Donec consectetur placerat mauris at aliquet. Nam eget rhoncus elit, sit amet laoreet enim. In sit amet enim sem. Etiam tortor turpis, viverra et nulla eget, interdum ornare eros. Praesent consectetur, diam sit amet venenatis pellentesque, sem nunc interdum lorem, et sagittis magna ipsum nec mi. Vestibulum dictum id arcu vel iaculis. Aliquam rutrum justo erat, eget mattis ex lobortis in. Nam arcu neque, tempus at nulla in, dignissim malesuada neque. Vivamus leo diam, vestibulum vel dapibus vel, tincidunt non lacus. Aliquam placerat lectus in velit porttitor tristique.'
-    date: September 2019
+    date: May 3, 2019
   - rating: 4.5
     review: 'Suspendisse imperdiet vitae ante nec gravida. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vestibulum eleifend eros tincidunt libero consequat vulputate. Donec pharetra nisl eu quam tempus, sed commodo est tincidunt. Phasellus laoreet sem id nisl dignissim, at porttitor mauris tristique. Proin vestibulum massa eget pretium elementum. Aliquam fringilla libero et urna posuere scelerisque. Fusce tristique eget lorem vel aliquet. Proin a orci vel eros laoreet accumsan. Etiam imperdiet ac lectus eu lacinia. Nam blandit, arcu nec condimentum porttitor, tortor elit maximus ligula, in rhoncus metus dolor a ipsum. Pellentesque suscipit iaculis nisi vitae pharetra. In hac habitasse platea dictumst.'
-    date: September 2019
+    date: April 28, 2019
   - rating: 5
     review: 'Donec rutrum eros sit amet tortor posuere, sed iaculis ex hendrerit. Pellentesque mauris libero, faucibus sit amet ipsum non, egestas vulputate diam. Nam sed lacinia dolor, at venenatis ante. Phasellus lacinia ut justo et fermentum. Ut ultricies turpis vel accumsan pellentesque. Aliquam eu porttitor justo. Suspendisse semper ipsum non risus suscipit interdum. Donec iaculis tempus nisl, quis tristique elit tristique ut. Suspendisse porttitor risus ac purus fringilla, non molestie ante egestas. Quisque iaculis gravida nunc sit amet porttitor. Donec consectetur placerat mauris at aliquet. Nam eget rhoncus elit, sit amet laoreet enim. In sit amet enim sem. Etiam tortor turpis, viverra et nulla eget, interdum ornare eros. Praesent consectetur, diam sit amet venenatis pellentesque, sem nunc interdum lorem, et sagittis magna ipsum nec mi. Vestibulum dictum id arcu vel iaculis. Aliquam rutrum justo erat, eget mattis ex lobortis in. Nam arcu neque, tempus at nulla in, dignissim malesuada neque. Vivamus leo diam, vestibulum vel dapibus vel, tincidunt non lacus. Aliquam placerat lectus in velit porttitor tristique.'
-    date: August 2019
+    date: March 4, 2019
   - rating: 3.5
     review: 'Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit, temporibus dolor rerum consequatur reiciendis, magni cum deserunt pariatur nisi atque unde commodi dicta nemo libero enim porro obcaecati? Ducimus, sapiente!'
-    date: August 2019
+    date: February 17, 2019
   - rating: 4
     review: 'Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit, temporibus dolor rerum consequatur reiciendis, magni cum deserunt pariatur nisi atque unde commodi dicta nemo libero enim porro obcaecati? Ducimus, sapiente!'
-    date: July 2019
+    date: January 2, 2019
