adjust spacing, style, and position for date information on article card

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/article-card/article-card.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/article-card/article-card.yml
@@ -1,4 +1,4 @@
 title: Tower Health Opens New Weight Loss Surgery & Wellness Center
 desc: 'The new facility, Tower Health Weight Loss Surgery & Wellness Center, brings together physicians, dietitians, and psychologists to combine weight loss care at 1220 Broadcasting Road, Suite 100 in Wyomissing.'
-date: Nov. 1, 2019
+date: November 1, 2019
 url: "#"
