--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/card-group/card-group--article.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/card-group/card-group--article.yml
@@ -1,25 +1,25 @@
 cards:
   - title: Tower Health Opens New Weight Loss Surgery & Wellness Center
     desc: 'The new facility, Tower Health Weight Loss Surgery & Wellness Center, brings together physicians, dietitians, and psychologists to combine weight loss care at 1220 Broadcasting Road, Suite 100 in Wyomissing.'
-    date: Nov. 1, 2019
+    date: November 1, 2019
     url: "#"
   - title: Reading Hospital Road Run Takes Off on Sunday
     desc: 'Hosted by The Friends of Reading Hospital, the event consists of a half marathon, 5K, and 1-mile fun run/walk that will race down the beautiful and scenic tree-lined streets of West Reading and Wyomissing.'
-    date: Nov. 1, 2019
+    date: January 1, 2019
     url: "#"
   - title: "Reading Hospital CEO, Physicians, Staff Participate in 'No Shave November'"
     desc: "The month-long event will raise awareness for men's health, McGlinn Cancer Institute, and show support for the many patients undergoing cancer treatment and experiencing hair loss."
-    date: Nov. 1, 2019
+    date: July 1, 2019
     url: "#"
   - title: The Friends of Reading Hospital Announce New Board Appointments
     desc: "The Friends of Reading Hospital is an association of community leaders that has been dedicated to raising funds to support and enhance Reading Hospital's mission of Advancing Health. Transforming Lives. for almost 130 years."
-    date: Nov. 1, 2019
+    date: August 1, 2019
     url: "#"
   - title: The Friends of Reading Hospital to Honor Heart Heros on November 19 
     desc: 'On Tuesday, November 19, members of The Friends of Reading Hospital and the Reading Hospital HeartSAFE committee will present Heart Hero Awards to individuals who provided emergency, life-saving care to two community members.'
-    date: Nov. 1, 2019
+    date: September 1, 2019
     url: "#"
   - title: The Friends of Reading Hospital to Host Annual Holiday Happening Artisans Fair on December 5
     desc: 'The event features more than 20 local and regional vendors and a variety of merchandise for sale including, homemade baked goods, seasonal decor, gourmet food items, handcrafted jewelry, and much more.'
-    date: Nov. 1, 2019
+    date: October 1, 2019
     url: "#"
