Fix code testing and update the-build

--- a/.the-build/build.yml
+++ b/.the-build/build.yml
@@ -84,3 +84,6 @@ phpmd:
   rulesets: "${build.thebuild.dir}/defaults/standard/phpmd.xml"
   # File extensions to review.
   suffixes: php,inc,module,theme,profile,install,test
+phpcs:
+  filelist: "${drupal.root}/modules/custom ${drupal.root}/themes/custom/tower_health/templates ${drupal.root}/themes/custom/tower_health/tower_health.theme"
+  extensions: "php,module,inc,install,test,profile,theme,css,info,txt,yml"
