--- a/composer.json
+++ b/composer.json
@@ -79,6 +79,7 @@
         "drupal/workbench_menu_access": "^1.1",
         "drupal/workbench_tabs": "^1.3",
         "flow/jsonpath": "^0.4.0",
+        "palantirnet/the-vagrant": "2.5",
         "sainsburys/guzzle-oauth2-plugin": "^3.0"
     },
     "require-dev": {
@@ -89,8 +90,7 @@
         "drupal/coder": "^8.3.6",
         "drupal/core-dev": "^8.8",
         "drupal/drupal-extension": "^3.1",
-        "palantirnet/the-build": "^2.2.1",
-        "palantirnet/the-vagrant": "^2.3"
+        "palantirnet/the-build": "^2.2.1"
     },
     "suggest": {
         "cweagans/composer-patches": "Try ^1.0. Apply patches to packages, especially Drupal.org contrib.",
@@ -116,7 +116,14 @@
             },
             "allowed-packages": [
                 "drupal/core"
-            ]
+            ],
+            "file-mapping": {
+                "[web-root]/.htaccess": {
+                    "mode": "replace",
+                    "path": "docroot/core/assets/scaffold/files/htaccess",
+                    "overwrite": false
+                }
+            }
         },
         "patches": {
             "drupal/migrate_plus": {
