Update to drush 9 for sites, make provider images able to be added via library.

--- a/config/sites/default/core.entity_view_display.node.location.default.yml
+++ b/config/sites/default/core.entity_view_display.node.location.default.yml
@@ -147,6 +147,7 @@ content:
     settings: {  }
     third_party_settings: {  }
 hidden:
+  field_location_geo: true
   field_location_id: true
   field_location_type: true
   search_api_excerpt: true
