--- a/config/sites/default/core.entity_form_display.node.profile.default.yml
+++ b/config/sites/default/core.entity_form_display.node.profile.default.yml
@@ -45,7 +45,7 @@ third_party_settings:
       children:
         - field_profile_video
       parent_name: group_content
-      weight: 39
+      weight: 38
       format_type: tab
       format_settings:
         id: ''
@@ -76,7 +76,7 @@ third_party_settings:
         - field_rating_comment_count
         - group_rating_comments
       parent_name: group_content
-      weight: 38
+      weight: 40
       format_type: tab
       format_settings:
         id: ''
@@ -99,7 +99,6 @@ third_party_settings:
         - field_profile_gender
         - field_profile_languages
         - field_profile_phone
-        - field_profile_image
         - field_location_ref
         - field_profile_education
         - field_area_interest_ref
@@ -110,7 +109,7 @@ third_party_settings:
         - field_profile_epic_id
         - field_profile_scheduling
       parent_name: group_content
-      weight: 37
+      weight: 39
       format_type: tab
       format_settings:
         id: ''
@@ -137,9 +136,10 @@ third_party_settings:
     group_content:
       children:
         - group_display
+        - group_provider_image
+        - group_video
         - group_migrated_data
         - group_ratings
-        - group_video
       parent_name: ''
       weight: 0
       format_type: tabs
@@ -149,6 +149,20 @@ third_party_settings:
         direction: vertical
       label: Content
       region: content
+    group_provider_image:
+      children:
+        - field_profile_image
+      parent_name: group_content
+      weight: 37
+      format_type: tab
+      region: content
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        formatter: closed
+        required_fields: true
+      label: 'Provider Image'
 id: node.profile.default
 targetEntityType: node
 bundle: profile
@@ -156,31 +170,11 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 2
+    weight: 3
     region: content
     settings: {  }
     third_party_settings: {  }
   field_affiliations_ref:
-    weight: 18
-    settings:
-      label: above
-      formatter_type: null
-      formatter_settings: null
-      show_description: false
-    third_party_settings: {  }
-    type: readonly_field_widget
-    region: content
-  field_area_interest_ref:
-    weight: 15
-    settings:
-      label: above
-      formatter_type: null
-      formatter_settings: null
-      show_description: false
-    third_party_settings: {  }
-    type: readonly_field_widget
-    region: content
-  field_insurance_ref:
     weight: 17
     settings:
       label: above
@@ -190,8 +184,8 @@ content:
     third_party_settings: {  }
     type: readonly_field_widget
     region: content
-  field_location_ref:
-    weight: 13
+  field_area_interest_ref:
+    weight: 14
     settings:
       label: above
       formatter_type: null
@@ -200,7 +194,7 @@ content:
     third_party_settings: {  }
     type: readonly_field_widget
     region: content
-  field_medical_specialties_ref:
+  field_insurance_ref:
     weight: 16
     settings:
       label: above
@@ -210,14 +204,34 @@ content:
     third_party_settings: {  }
     type: readonly_field_widget
     region: content
+  field_location_ref:
+    weight: 12
+    settings:
+      label: above
+      formatter_type: null
+      formatter_settings: null
+      show_description: false
+    third_party_settings: {  }
+    type: readonly_field_widget
+    region: content
+  field_medical_specialties_ref:
+    weight: 15
+    settings:
+      label: above
+      formatter_type: null
+      formatter_settings: null
+      show_description: false
+    third_party_settings: {  }
+    type: readonly_field_widget
+    region: content
   field_metatags:
-    weight: 41
+    weight: 10
     settings: {  }
     third_party_settings: {  }
     type: metatag_firehose
     region: content
   field_profile_board_certified:
-    weight: 19
+    weight: 18
     settings:
       label: above
       formatter_type: null
@@ -228,7 +242,7 @@ content:
     region: content
   field_profile_education:
     type: readonly_field_widget
-    weight: 14
+    weight: 13
     settings:
       label: above
       formatter_type: null
@@ -237,7 +251,7 @@ content:
     third_party_settings: {  }
     region: content
   field_profile_epic_id:
-    weight: 20
+    weight: 19
     settings:
       label: above
       formatter_type: null
@@ -269,13 +283,10 @@ content:
     type: readonly_field_widget
     region: content
   field_profile_image:
-    type: readonly_field_widget
-    weight: 12
+    type: media_library_widget
+    weight: 20
     settings:
-      label: above
-      formatter_type: null
-      formatter_settings: null
-      show_description: false
+      media_types: {  }
     third_party_settings: {  }
     region: content
   field_profile_job_title:
@@ -422,19 +433,22 @@ content:
   field_rating_overall:
     weight: 31
     settings:
-      placeholder: ''
+      label: above
+      formatter_type: null
+      formatter_settings: null
+      show_description: false
     third_party_settings: {  }
     type: readonly_field_widget
     region: content
   moderation_state:
     type: moderation_state_default
-    weight: 7
+    weight: 8
     settings: {  }
     region: content
     third_party_settings: {  }
   path:
     type: path
-    weight: 5
+    weight: 6
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -442,21 +456,21 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 3
+    weight: 4
     region: content
     third_party_settings: {  }
   status:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 6
+    weight: 7
     region: content
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 4
+    weight: 5
     region: content
     third_party_settings: {  }
   title:
@@ -469,7 +483,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 1
+    weight: 2
     settings:
       match_operator: CONTAINS
       size: 60
@@ -478,7 +492,7 @@ content:
     region: content
     third_party_settings: {  }
   url_redirects:
-    weight: 8
+    weight: 9
     region: content
     settings: {  }
     third_party_settings: {  }
