--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/basic/basic.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/basic/basic.yml
@@ -28,7 +28,7 @@ rich_text:
   -
     type: blockquote
     blockquote_content:
-      "Sed porttitor lectus nibh. Nulla quis lorem ut libero malesuada feugiat. Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Donec sollicitudin molestie malesuada. Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Quisque velit nisi, pretium ut lacinia in, elementum id enim. Nulla porttitor accumsan tincidunt. Donec sollicitudin molestie malesuada. Quisque velit nisi, pretium ut lacinia in, elementum id enim."
+      "Sed porttitor lectus nibh. Nulla quis lorem ut libero malesuada feugiat. Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. "
     blockquote_modifiers:
       1:
         left
