--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/service-detail/service-detail--simple.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/service-detail/service-detail--simple.yml
@@ -129,7 +129,7 @@ cards:
   - type: null
     image: null
     title: Breast Self-exam Instruction
-    desc: 'While you’re meeting everyone else’s needs, it’s important that you don’t neglect your own health. This guide will help you understand your options.'
+    desc: "While you're meeting everyone else's needs, it's important that you don't neglect your own health. This guide will help you understand your options."
     url:
       link: '#'
       label: Tests & Screenings Guide
