--- a/config/sites/default/views.view.find_a_location.yml
+++ b/config/sites/default/views.view.find_a_location.yml
@@ -296,6 +296,8 @@ display:
               authenticated: authenticated
               anonymous: '0'
               administrator: '0'
+            operator_limit_selection: false
+            operator_list: {  }
           is_grouped: false
           group_info:
             label: ''
