--- a/config/sites/default/views.view.find_a_provider.yml
+++ b/config/sites/default/views.view.find_a_provider.yml
@@ -36,7 +36,7 @@ display:
       exposed_form:
         type: basic
         options:
-          submit_button: 'Find a doctor'
+          submit_button: 'Search Providers'
           reset_button: false
           reset_button_label: Reset
           exposed_sorts_label: 'Sort by'
@@ -301,6 +301,8 @@ display:
               authenticated: authenticated
               anonymous: '0'
               administrator: '0'
+            operator_limit_selection: false
+            operator_list: {  }
           is_grouped: false
           group_info:
             label: ''
