--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-banner/cta-banner.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-banner/cta-banner.yml
@@ -1,4 +1,5 @@
-title_2: "Manage your Care, Anywhere."
+title__top: "First title,"
+title__bottom: "Manage your Care, Anywhere."
 subtitle: With the My Tower Heath patient portal, you can talk to your doctor, manage appointments and safely access your health information. Anytime. Even on your phone.
 img:
   src: "../../images/th-cta-image.jpg"
